[gd_scene load_steps=5 format=3 uid="uid://bb5oedvupwpal"]

[ext_resource type="PackedScene" uid="uid://br5kr5h0352ku" path="res://Scenes/Turrets/turret_container.tscn" id="1_i0mur"]
[ext_resource type="Script" path="res://Scenes/Turrets/Honeycomb Harpoon/honeycomb_harpoon_container.gd" id="2_fydke"]
[ext_resource type="PackedScene" uid="uid://y5qsxrgbwaun" path="res://Models/Turrets/Honeycomb Harpoon/honeycomb_harpoon.tscn" id="2_mpubw"]
[ext_resource type="PackedScene" uid="uid://50iiecubqj2t" path="res://Scenes/Turrets/Honeycomb Harpoon/harpoon_projectile.tscn" id="3_3kmnc"]

[node name="HoneycombHarpoonContainer" instance=ExtResource("1_i0mur")]
script = ExtResource("2_fydke")
fire_rate_ms = 3000
projectiles_to_shoot_at_a_time = 1
projectile_speed = 2.0
projectile_type = ExtResource("3_3kmnc")

[node name="HoneycombHarpoon" parent="." index="0" instance=ExtResource("2_mpubw")]

[connection signal="area_entered" from="HoneycombHarpoon" to="." method="_on_honeycomb_harpoon_area_entered"]
[connection signal="area_exited" from="HoneycombHarpoon" to="." method="_on_honeycomb_harpoon_area_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/Idle" to="." method="_on_idle_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/Acquiring" to="." method="_on_acquiring_state_entered"]
[connection signal="state_processing" from="StateChart/CompoundState/Acquiring" to="." method="_on_acquiring_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/Attacking" to="." method="_on_attacking_state_entered"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Attacking" to="." method="_on_attacking_state_physics_processing"]
